Modified homepage to not include link to DREU page.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Last updated June 2017
             color: gray;
         }
     </style>
-</head
+</head>
 
 <body>
     <div id="content">
@@ -65,7 +65,6 @@ Last updated June 2017
         
         <div id="links">
             <a href="/recent.html">[ recent work ]</a>
-            <a href="/dreu.html">[ dreu ]</a>
             <a href="/contact.html">[ contact ]</a>
         </div>
     </div>
