updated links - tech/art/travel/contact

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@ Last updated June 2017
         </div>
         
         <div id="links">
-            <a href="/recent.html">[ recent work ]</a>
+            <a href="/recent.html">[ tech ]</a>
+            <a href="/art.html">[ art ]</a>
+            <a href="/travel.html">[ travel ]</a>
             <a href="/contact.html">[ contact ]</a>
         </div>
     </div>
