fixed tech link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Last updated June 2017
         </div>
         
         <div id="links">
-            <a href="/recent.html">[ tech ]</a>
+            <a href="/tech.html">[ tech ]</a>
             <a href="/art.html">[ art ]</a>
             <a href="/travel.html">[ travel ]</a>
             <a href="/contact.html">[ contact ]</a>
