find my friend fixed update

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ Last updated June 2017
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet">
     <style type="text/css">
-        #bread {
+        #bread img {
           display: block;
           margin: auto;
-          width: 40%;
+          width: 400px;
         }
     </style>
 </head>
