--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Last updated June 2017
 
 <body>
     <div id="content">
-      <img src="media/findmyfriend.jpg">
+      <img src="media/findmyfriend.jpg" width="300px">
     </div>
 </body>
 
