--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@ Last updated June 2017
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet">
     <style type="text/css">
-        #bread img {
-          display: block;
+        img {
+          width: 350px;
+          height: auto;
+
+          position: absolute;
+          top:0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+
           margin: auto;
-          width: 400px;
         }
     </style>
 </head>
 
 <body>
-    <div id="content">
-      <img src="media/findmyfriend.jpg" width="300px">
+    <div class="bread">
+      <img src="media/findmyfriend.gif">
     </div>
 </body>
 
