--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 main.html
 Homepage for joanzheng.com
 Created by Joan Zheng
-Last updated June 2017
+Last updated Feb 2018
 --->
 <html lang="en-us">
 <head>
@@ -45,7 +45,9 @@ Last updated June 2017
         }
         
         #links a:hover {
-            color: gray;
+            background-color: coral;
+            text-decoration: none;
+            color: white;
         }
     </style>
 </head>
