--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@ Last updated Feb 2018
 --->
 <html lang="en-us">
 <head>
-    <title>joan zheng</title>
+    <title>best thing since sliced bread</title>
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet">
     <style type="text/css">
         img {
-          width: 350px;
-          height: auto;
+            display: block;
+            width: 350px;
+            height: auto;
+        }
 
-          position: absolute;
-          top:0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-
-          margin: auto;
+        .bread {
+            text-align:center; 
+            position: absolute; 
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 
 <body>
     <div class="bread">
-      <img src="media/findmyfriend.gif">
+      <img src="media/bread.png">
     </div>
 </body>
 
