--- a/dreu.html
+++ b/dreu.html
@@ -52,7 +52,7 @@ Last updated January 2018
     <table>
     <tbody>
     <tr>
-        <td><img width="200px" src="joan.png" alt="Joan Zheng"></td>
+        <td><img width="200px" src="/media/joan.png" alt="Joan Zheng"></td>
         
         <td width="75%">
             <p>
