now with spinning

--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<!---
-main.html
-Homepage for joanzheng.com
-Created by Joan Zheng
-Last updated Feb 2018
---->
 <html lang="en-us">
 <head>
     <title>best thing since sliced bread</title>
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet">
+    <link href="resources/spin.css" rel="stylesheet" type="text/css">
     <style type="text/css">
         img {
             display: block;
-            width: 350px;
+            width: 200px;
             height: auto;
         }
-
+        
         .bread {
             text-align:center; 
             position: absolute; 
@@ -29,7 +24,7 @@ Last updated Feb 2018
 
 <body>
     <div class="bread">
-      <img src="media/bread.png">
+      <img src="media/bread.png" class="ILOVETOSPIN">
     </div>
 </body>
 
