the expanding universe

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 </head>
 
 <body>
-    <div class="bread">
-      <img src="media/bread.png" class="ILOVETOSPIN">
-    </div>
+    <a href="http://upfor.digital/JohannesHelden/red_shift.html">
+        <div class="bread">
+          <img src="media/bread.png" class="ILOVETOSPIN">
+        </div>
+    </a>
 </body>
 
 </html>
